--- a/client/package.json
+++ b/client/package.json
@@ -8,10 +8,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "aws-amplify": "^3.0.23",
+    "aws-amplify-vue": "^2.1.2",
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
     "vue-moment": "^4.1.0",
-    "vue-router": "^3.4.3"
+    "vue-router": "^3.4.3",
+    "vue-spinner": "^1.0.4"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.5.0",
@@ -34,7 +37,10 @@
     "parserOptions": {
       "parser": "babel-eslint"
     },
-    "rules": {}
+    "rules": {
+      "no-unused-vars": "off", 
+      "no-undef": "off"
+    }
   },
   "browserslist": [
     "> 1%",
