--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.27.0",
     "monk": "^7.3.1",
+    "mysql": "^2.18.1",
     "node-uuid": "^1.4.8"
   },
   "devDependencies": {},
