--- a/server/package.json
+++ b/server/package.json
@@ -10,9 +10,11 @@
     "cookie-parser": "^1.4.5",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
+    "mailgun-js": "^0.22.0",
     "moment": "^2.27.0",
     "monk": "^7.3.1",
     "mysql": "^2.18.1",
+    "node-cron": "^2.0.3",
     "node-uuid": "^1.4.8"
   },
   "devDependencies": {},
